base/pingaccess/deployment.yaml
# This defines the pingaccess deployment.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingaccess
spec:
  replicas: 1
  template:
    metadata:
      name: pingaccess
      annotations:
        lastUpdateTime: "NA"
    spec:
      containers:
      - name: pingaccess
        image: pingidentity/pingaccess:edge
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
          name: pa-admin
        - containerPort: 443
          name: pa-runtime
