base/pingaccess/service.yaml
# This service exposes the pingaccess console to the cluster.

apiVersion: v1
kind: Service
metadata:
  name: pingaccess-admin
spec:
  ports:
    - port: 9000
      name: pa-admin

---

apiVersion: v1
kind: Service
metadata:
  name: pingaccess
spec:
  ports:
    - port: 443
      name: pa-runtime
