base/pingaccess/z_sample_build.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    role: pingaccess
  name: pingaccess
spec:
  ports:
  - name: pa-admin
    port: 9000
  - name: pa-runtime
    port: 443
  selector:
    role: pingaccess
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    role: pingaccess
  name: pingaccess
spec:
  replicas: 1
  selector:
    matchLabels:
      role: pingaccess
  template:
    metadata:
      annotations:
        lastUpdateTime: NA
      labels:
        role: pingaccess
      name: pingaccess
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: pingaccess-environment-variables-h57h956hmb
        image: pingidentity/pingaccess:edge
        name: pingaccess
        ports:
        - containerPort: 9000
          name: pa-admin
        - containerPort: 443
          name: pa-runtime
